--- a/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/Login.cshtml
+++ b/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/"
 @model LoginModel
 
 @{
@@ -19,7 +19,7 @@
             <section>
                 <form id="account" method="post">
                     <h1>@ViewData["Title"]</h1>
-                    <h3 style="font-weight:bold; color:darkgreen">Welcome!</h3>
+                    <h4 style="font-weight:bold; color:darkgreen">Welcome!</h4>
                     <hr />
                     <div asp-validation-summary="All" class="text-danger"></div>
                     <div class="form-group">
