--- a/CommerceProject/CommerceProject/Shared/MainLayout.razor
+++ b/CommerceProject/CommerceProject/Shared/MainLayout.razor
@@ -1,18 +1,12 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
 
-    <div class="main">
-        <div class="top-row px-4 auth">
-            <LoginDisplay />
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
+<header>
+    <NavMenu />
+</header>
 
-        <div class="content px-4">
-            @Body
-        </div>
-    </div>
+<div class="container">
+    <main role="main" class="pl-3">
+        @Body
+    </main>
 </div>
