--- a/CommerceProject/CommerceProject/Shared/NavMenu.razor.css
+++ b/CommerceProject/CommerceProject/Shared/NavMenu.razor.css
@@ -7,6 +7,16 @@
     background-color: rgba(0,0,0,0.4);
 }
 
+.btn {
+    font-family: sans-serif;
+    background-color:#006747
+}
+
+    .btn:hover {
+        background-color: #4FA800
+    }
+
+
 .navbar-brand {
     font-size: 1.1rem;
 }
@@ -18,18 +28,17 @@
     top: -2px;
 }
 
-.nav-item {
-    font-size: 0.9rem;
-    padding-bottom: 0.5rem;
+.abs-center-x {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
-    .nav-item:first-of-type {
-        padding-top: 1rem;
-    }
-
-    .nav-item:last-of-type {
-        padding-bottom: 1rem;
-    }
+.nav-item {
+    font-family: Poppins;
+    font-size: 1.2rem;
+    padding-top: 0;
+}
 
     .nav-item ::deep a {
         color: #d7d7d7;
@@ -40,15 +49,23 @@
         line-height: 3rem;
     }
 
-.nav-item ::deep a.active {
-    background-color: rgba(255,255,255,0.25);
-    color: white;
-}
 
-.nav-item ::deep a:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
-}
+    .nav-item a:after {
+        background: none repeat scroll 0 0 transparent;
+        bottom: 0;
+        content: "";
+        display: block;
+        height: 4px;
+        left: 50%;
+        position: absolute;
+        background: #4FA800;
+        width: 0;
+    }
+
+    .nav-item a:hover:after {
+        width: 100%;
+        left: 0;
+    }
 
 @media (min-width: 641px) {
     .navbar-toggler {
