--- a/CommerceProject/CommerceProject/Pages/Counter.razor
+++ b/CommerceProject/CommerceProject/Pages/Counter.razor
@@ -1,16 +1,17 @@
 ﻿@page "/counter"
-
+@using CommerceProject.Data
 <h1>Counter</h1>
 
-<p>Current count: @currentCount</p>
+<p>Current count: @transaction_list[0]</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
-    private int currentCount = 0;
+    public List<Transaction> transaction_list;
+    public GetTransactionData get_list = new GetTransactionData();
 
     private void IncrementCount()
     {
-        currentCount++;
+        transaction_list = get_list.GetTransactions().ToList<Transaction>();
     }
 }
