Removed login header and modified register page

--- a/CommerceProject/CommerceProject/Pages/_Host.cshtml
+++ b/CommerceProject/CommerceProject/Pages/_Host.cshtml
@@ -23,7 +23,7 @@
     <link href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css" rel="stylesheet" />
 </head>
 <body>
-    <component type="typeof(App)" render-mode="ServerPrerendered" />
+    <component type="typeof(App)" render-mode="Server" />
 
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
