--- a/CommerceProject/CommerceProject/Shared/NavMenu.razor
+++ b/CommerceProject/CommerceProject/Shared/NavMenu.razor
@@ -23,10 +23,9 @@
         </div>
 
         <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
-
-                <button type="button" class="btn btn-primary">Sign out</button>
+            <form method="post" action="Identity/Account/LogOut">
+                <button type="submit" class="nav-link btn btn-link">Sign out</button>
+            </form>
         </div>
-
-
     </div>
 </nav>
