--- a/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/Register.cshtml
+++ b/CommerceProject/CommerceProject/Areas/Identity/Pages/Account/Register.cshtml
@@ -36,7 +36,14 @@
                     <input asp-for="Input.ConfirmPassword" class="form-control" />
                     <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                 </div>
-                <button type="submit" class="btn btn-primary">Register</button>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Register</button>
+                </div>
+                <div class="form-group">
+                    <p>
+                        <a asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl">Already have an account? Login</a>
+                    </p>
+                </div>
             </form>
         </div>
         <div class="col-4 row">
