--- a/CommerceProject/CommerceProject/Pages/Shared/_Layout.cshtml
+++ b/CommerceProject/CommerceProject/Pages/Shared/_Layout.cshtml
@@ -12,41 +12,14 @@
     <link rel="stylesheet" href="~/Identity/css/site.css" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-light navbar-toggleable-sm bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" href="~/">CommerceProject</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    @{
-                        var result = Engine.FindView(ViewContext, "_LoginPartial", isMainPage: false);
-                    }
-                    @if (result.Success)
-                    {
-                        await Html.RenderPartialAsync("_LoginPartial");
-                    }
-                    else
-                    {
-                        throw new InvalidOperationException("The default Identity UI layout requires a partial view '_LoginPartial' " +
-                            "usually located at '/Pages/_LoginPartial' or at '/Views/Shared/_LoginPartial' to work. Based on your configuration " +
-                            $"we have looked at it in the following locations: {System.Environment.NewLine}{string.Join(System.Environment.NewLine, result.SearchedLocations)}.");
-                    }
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <div class="container">
+    <div class="container" style="padding-top:20px;">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
     <footer class="footer border-top text-muted">
         <div class="container">
-            &copy; 2021 - CommerceProject - <a asp-area="" asp-page="Privacy">Privacy</a>
+            &copy; 2021 - CommerceProject <!--- <a asp-area="" asp-page="Privacy">Privacy</a>-->
         </div>
     </footer>
     <script src="~/Identity/lib/jquery/dist/jquery.min.js"></script>
