--- a/CommerceProject/CommerceProject/Shared/MainLayout.razor
+++ b/CommerceProject/CommerceProject/Shared/MainLayout.razor
@@ -1,12 +1,19 @@
 ﻿@inherits LayoutComponentBase
+@using CommerceProject.Pages
 
+<AuthorizeView>
+    <Authorized>
+        <header>
+            <NavMenu />
+        </header>
 
-<header>
-    <NavMenu/>
-</header>
-
-<div class="container">
-    <main role="main" class="pl-3">
-        @Body
-    </main>
-</div>
+        <div class="container">
+            <main role="main" class="pl-3">
+                @Body
+            </main>
+        </div>
+    </Authorized>
+    <NotAuthorized>
+        <RedirectToLogin Url="Identity/Account/Login" />
+    </NotAuthorized>
+</AuthorizeView>
